# Theory-Zero

Black_Hole_Lab/: .gitignore  .pre-commit-config.yaml  Makefile  README.md  auto_setup_phase5.py  blackhole_simulation.py  check_stability.py  make_refs.py  phase1_reference.json  phase1_reference.py  phase5_blackhole_bake.py  pyproject.toml  requirements.txt
Black_Hole_Lab/.github/workflows/: ci.yml
Black_Hole_Lab/data/registry/: README.md
Black_Hole_Lab/db/: schema.sql
Black_Hole_Lab/docs/: architecture.md  experiments.md  phases.md
Black_Hole_Lab/experiments/: run.py
Black_Hole_Lab/experiments/configs/: baseline.yaml  smoke.yaml
Black_Hole_Lab/experiments/sweeps/: baseline_sweep.yaml
Black_Hole_Lab/legacy/: README_MIGRATION.md  auto_setup_phase5.py  blackhole_simulation.py  make_refs.py  phase1_reference.py  phase2_reference.json  pytest.ini
Black_Hole_Lab/legacy/sim/: backend.py  entropy_field.py  metric.py  physics.py  test_entropy.py
Black_Hole_Lab/legacy/tests/: test_phase2_parity.py
Black_Hole_Lab/refs/: phase2_wij.npy
Black_Hole_Lab/scripts/: report.py  run_example.py
Black_Hole_Lab/sim/: __init__.py  backend.py  entropy_field.py  integrators.py  io.py  phase2_wij.py  physics.py  run_phase3.py  test_flat.py
Black_Hole_Lab/src/theory_zero/: __init__.py  cli.py
Black_Hole_Lab/src/tz/: __init__.py
Black_Hole_Lab/tests/: test_backend_parity.py  test_cli_smoke.py  test_imports.py  test_integrators.py  test_metrics.py  test_property_invariants.py
Black_Hole_Lab/tz/: __init__.py
Black_Hole_Lab/tz/backend/: __init__.py  base.py
Black_Hole_Lab/tz/core/: __init__.py  constants.py
Black_Hole_Lab/tz/db/: __init__.py  api.py  schema.py
Black_Hole_Lab/tz/integrators/: __init__.py  base.py
Black_Hole_Lab/tz/io/: __init__.py  (+1 more)
(+38 files in other folders)
